[front-end] Implement most analytics from tracking plan
