# libs/common/src/api/mykomap-openapi.json
@@ -1109,6 +1109,10 @@
                               },
                               "displayText": {
                                 "type": "string"
+                              },
+                              "analyticOnClick": {
+                                "default": false,
+                                "type": "boolean"
                               }
                             },
                             "required": [
@@ -1150,6 +1154,10 @@
                               },
                               "displayText": {
                                 "type": "string"
+                              },
+                              "analyticOnClick": {
+                                "default": false,
+                                "type": "boolean"
                               }
                             },
                             "required": [
@@ -1191,6 +1199,10 @@
                               },
                               "displayText": {
                                 "type": "string"
+                              },
+                              "analyticOnClick": {
+                                "default": false,
+                                "type": "boolean"
                               }
                             },
                             "required": [
